# e4b

./: CMakeLists.txt  LICENSE  README.md  build-info.cpp.in  e4b.cpp  e4b.h
examples/: CMakeLists.txt
scripts/: gen-build-info-cpp.cmake
tests/: CMakeLists.txt  test-c.c  test-cosine-similarity.cpp
